--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,9 +1,9 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XT7757V4W"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H0M4NG0G5J"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7XT7757V4W');
+  gtag('config', 'G-H0M4NG0G5J');
 </script>
